update : bento grid system of cards

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,24 +1,24 @@
 @media (min-width: 600px) {
     .notes__container {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        column-count: 2;
     }
 }
 
 @media (min-width: 900px) {
     .notes__container {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        column-count: 3;
     }
 }
 
 @media (min-width: 1200px) {
     .notes__container {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        column-count: 3;
     }
 }
 
 @media (min-width: 1300px) {
     .notes__container {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+        column-count: 4;
     }
 }
 
